logs/dojango.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dojango'...
Listing './lib/python3.5/site-packages/dojango/appengine'...
Compiling './lib/python3.5/site-packages/dojango/appengine/memcache_zipserve.py'...
***   File "./lib/python3.5/site-packages/dojango/appengine/memcache_zipserve.py", line 223
    except (KeyError, RuntimeError), err:
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dojango/conf'...
Listing './lib/python3.5/site-packages/dojango/contrib'...
Listing './lib/python3.5/site-packages/dojango/contrib/auth'...
Listing './lib/python3.5/site-packages/dojango/data'...
Listing './lib/python3.5/site-packages/dojango/data/modelstore'...
Listing './lib/python3.5/site-packages/dojango/data/piston'...
Compiling './lib/python3.5/site-packages/dojango/decorators.py'...
***   File "./lib/python3.5/site-packages/dojango/decorators.py", line 139
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dojango/dojo-media'...
Listing './lib/python3.5/site-packages/dojango/dojo-media/dojango'...
Listing './lib/python3.5/site-packages/dojango/dojo-media/dojango/form'...
Listing './lib/python3.5/site-packages/dojango/dojo-media/dojango/resources'...
Listing './lib/python3.5/site-packages/dojango/dojo-media/dojango/widget'...
Listing './lib/python3.5/site-packages/dojango/dojo-media/dojango/widget/plugins'...
Listing './lib/python3.5/site-packages/dojango/dojo-media/dojango/widget/resources'...
Listing './lib/python3.5/site-packages/dojango/dojo-media/src'...
Listing './lib/python3.5/site-packages/dojango/forms'...
Listing './lib/python3.5/site-packages/dojango/management'...
Listing './lib/python3.5/site-packages/dojango/management/commands'...
Compiling './lib/python3.5/site-packages/dojango/management/commands/dojobuild.py'...
***   File "./lib/python3.5/site-packages/dojango/management/commands/dojobuild.py", line 88
    os.chmod(os.path.join(buildscript_dir, 'build.sh'), 0755)
                                                           ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/dojango/management/commands/dojoload.py'...
***   File "./lib/python3.5/site-packages/dojango/management/commands/dojoload.py", line 58
    print "Downloading %s to %s" % (dl_url, dl_to_path)
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dojango/templates'...
Listing './lib/python3.5/site-packages/dojango/templates/dojango'...
Listing './lib/python3.5/site-packages/dojango/templates/dojango/templatetag'...
Listing './lib/python3.5/site-packages/dojango/templatetags'...
Compiling './lib/python3.5/site-packages/dojango/templatetags/dojango_base.py'...
***   File "./lib/python3.5/site-packages/dojango/templatetags/dojango_base.py", line 17
    raise template.TemplateSyntaxError, "Could not find the profile '%s' in the DOJANGO_DOJO_PROFILES settings" % (self.profile)
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dojango/templatetags/dojango_grid.py'...
***   File "./lib/python3.5/site-packages/dojango/templatetags/dojango_grid.py", line 27
    raise TemplateSyntaxError, "You have to pass app- and model-name to {% simple_datagrid app model %}"
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dojango/util'...
Compiling './lib/python3.5/site-packages/dojango/util/__init__.py'...
***   File "./lib/python3.5/site-packages/dojango/util/__init__.py", line 79
    except UnicodeDecodeError, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dojango/util/media.py'...
***   File "./lib/python3.5/site-packages/dojango/util/media.py", line 27
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dojango/views.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (views.py, line 68)
Listing './lib/python3.5/site-packages/dojango-0.5.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
